@@ -60,21 +60,10 @@ endif
 # Library build information.
 # --------------------------------------------
 
-SHLIB_MAJOR=	@MAJOR_VERSION@
-SHLIB_MINOR=	@MINOR_VERSION@
-SHLIB_MICRO=	@MICRO_VERSION@
+LIBRARY_VERSION=	@LIBRARY_VERSION@
 
 # We do not do version numbering for dynamic libraries on Win32.
-ifneq (@OS_TYPE@, Win32)
-DYNAMICLIB_VER=		.$(SHLIB_MAJOR).$(SHLIB_MINOR).$(SHLIB_MICRO)
-DYNAMIC_LIB_LINKS=	$$LIB.$(DYNAMICLIB_EXT)				\
-			$$LIB.$(DYNAMICLIB_EXT).$(SHLIB_MAJOR)		\
-			$$LIB.$(DYNAMICLIB_EXT).$(SHLIB_MAJOR).$(SHLIB_MINOR)
-PROF_DYNAMIC_LIB_LINKS=	$${LIB}$(PROFLIB_EXT).$(DYNAMICLIB_EXT)		\
-			$${LIB}$(PROFLIB_EXT).$(DYNAMICLIB_EXT).$(SHLIB_MAJOR) \
-			$${LIB}$(PROFLIB_EXT).$(DYNAMICLIB_EXT).$(SHLIB_MAJOR).$(SHLIB_MINOR)
-# But we will name the static libraries differently than the dynamic libraries.
-else
+ifeq (@OS_TYPE@, Win32)
 STATIC_SUFFIX=	_s
 endif
 
@@ -85,8 +74,8 @@ endif
 
 # Add extra linking options on Darwin/OS X.
 ifeq (@PLATFORM@, Darwin)
-LDOPTS+=	-Wl,-dylib_compatibility_version,$(SHLIB_MAJOR).$(SHLIB_MINOR)
-LDOPTS+=	-Wl,-dylib_current_version,$(SHLIB_MAJOR).$(SHLIB_MINOR).$(SHLIB_MICRO)
+LDOPTS+=	-Wl,-dylib_compatibility_version,$(MAJOR_VERSION).$(MINOR_VERSION)
+LDOPTS+=	-Wl,-dylib_current_version,$(MAJOR_VERSION).$(MINOR_VERSION).$(MICRO_VERSION)
 LDOPTS_DBG=	-g
 LDOPTS_OPT=	-Wl,-x
 endif
@@ -102,10 +91,28 @@ PROF_DYNAMIC_LIBS=	$${LIB}$(PROFLIB_EXT).$(DYNAMICLIB_EXT)$(DYNAMICLIB_VER)
 DYLIB_DEPS=		@DYLIB_DEPS@
 DYLIB_PROF_DEPS=	@DYLIB_PROF_DEPS@
 
-GADGET_LIB_STATIC=		$(GADGET_LIBRARY)$(STATIC_SUFFIX).$(STATICLIB_EXT)
-GADGET_LIB_DYNAMIC=		$(GADGET_LIBRARY).$(DYNAMICLIB_EXT)$(DYNAMICLIB_VER)
-GADGET_PROF_LIB_STATIC=		$(GADGET_LIBRARY)$(PROFLIB_EXT)$(STATIC_SUFFIX).$(STATICLIB_EXT)
-GADGET_PROF_LIB_DYNAMIC=	$(GADGET_LIBRARY)$(PROFLIB_EXT).$(DYNAMICLIB_EXT)$(DYNAMICLIB_VER)
+# These functions build up the name of the library using a comon form.
+# Unfortunately, spaces have significance in GNU Make function calls, so there
+# cannot be spaces after any commas.
+make_libname=			$(1)$(2)$(LIBRARY_VERSION).$(3)
+make_static=			$(call make_libname,$(1),$(STATIC_SUFFIX),$(STATICLIB_EXT))
+make_dynamic=			$(call make_libname,$(1),,$(DYNAMICLIB_EXT))
+make_static_prof=		$(call make_libname,$(1),$(PROFLIB_EXT)$(STATIC_SUFFIX),$(STATICLIB_EXT))
+make_dynamic_prof=		$(call make_libname,$(1),$(PROFLIB_EXT),$(DYNAMICLIB_EXT))
+
+# Full list of the libraries to build. These are for Doozer++.
+LIBS=				$(GADGET_LIBRARY)
+STATIC_LIBS=			$(call make_static,$${LIB})
+DYNAMIC_LIBS=			$(call make_dynamic,$${LIB})
+PROF_STATIC_LIBS=		$(call make_static_prof,$${LIB})
+PROF_DYNAMIC_LIBS=		$(call make_dynamic_prof,$${LIB})
+
+# The proper library names. These are used below in the targets that actually
+# build the libraries.
+GADGET_LIB_STATIC=		$(call make_static,$(GADGET_LIBRARY))
+GADGET_LIB_DYNAMIC=		$(call make_dynamic,$(GADGET_LIBRARY))
+GADGET_PROF_LIB_STATIC=		$(call make_static_prof,$(GADGET_LIBRARY))
+GADGET_PROF_LIB_DYNAMIC=	$(call make_dynamic_prof,$(GADGET_LIBRARY))
 
 # Version information.
 PARAM_HEADER=	gadget/gadgetParam.h
@@ -123,7 +130,7 @@ endif
 # =============================================================================
 # Library targets.
 # =============================================================================
-
+OBJS=		$(OBJDIR)/*.$(OBJEXT)
 BEFOREBUILD=	beforebuild
 AFTERBUILD=	afterbuild
 
@@ -150,7 +157,7 @@ afterbuild:
 # -----------------------------------------------
 # Construct the static version of the libraries.
 # -----------------------------------------------
-$(LIBDIR)/$(GADGET_LIB_STATIC) $(LIBDIR)/$(GADGET_PROF_LIB_STATIC): $(OBJDIR)/*.$(OBJEXT)
+$(LIBDIR)/$(GADGET_LIB_STATIC) $(LIBDIR)/$(GADGET_PROF_LIB_STATIC): $(OBJS)
 	@echo "------------------------------------------------"
 	@echo "Creating $@"
 	@echo "------------------------------------------------"
@@ -165,7 +172,7 @@ $(LIBDIR)/$(GADGET_LIB_STATIC) $(LIBDIR)/$(GADGET_PROF_LIB_STATIC): $(OBJDIR)/*.
 # ------------------------------------------------
 # Construct the dynamic version of the libraries.
 # ------------------------------------------------
-$(LIBDIR)/$(GADGET_LIB_DYNAMIC): $(OBJDIR)/*.$(OBJEXT)
+$(LIBDIR)/$(GADGET_LIB_DYNAMIC): $(OBJS)
 	@echo "------------------------------------------------"
 	@echo "Creating $@"
 	@echo "------------------------------------------------"
